# fossey-ocr

./: .gitignore  README.md  app.py  catalog.json  cli_example.py  cli_utils.py  cuneiform_analyzer.py  fossey_ocr_main.py  google_vision_ocr.py  image_processing.py  image_utils.py  king_abbreviation_matches.xlsx  kings.py  line_detection.py  ocr_utils.py  proje_tum_kodlar.txt  pyproject.toml  requirements.txt  setup.py  splitting-1.txt  utils.py  web_utils.py
fossey-reader/: AncientDocumentReader.py  __init__.py
src/fossey_reader/: AncientDocumentReader.py  __init__.py  main_fossey_ocr.py
static/css/: style.css
static/js/: main.js
templates/: base.html  index.html  line_detail.html  results.html
